--- a/omod/src/main/webapp/resources/htmlforms/nutritionassessment.html
+++ b/omod/src/main/webapp/resources/htmlforms/nutritionassessment.html
@@ -232,12 +232,59 @@
                     </tr>
                 </table>
                 <hr />
-                <h3 class="StepTitle-2">Dietary assessment (not yet complete)</h3>
-                <table cellspacing="5" style=" float: left;">
-                    <tr></tr>
+                <table cellspacing="15" style=" float: left;">
+                    <tr><th>Dietary assessment (not yet complete)</th></tr>
+                    <tr>
+                        <td><obs conceptId="1198AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="782AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Breakfast" style="checkbox" /></td>
+                    </tr>
+                    <tr>
+                        <td><obs conceptId="1198AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="782AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Snacks between" style="checkbox" /></td>
+                    </tr>
+                    <tr>
+                        <td><obs conceptId="1198AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="782AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Lunch" style="checkbox" /></td>
+                    </tr>
+                    <tr>
+                        <td><obs conceptId="1198AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="782AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Snacks between" style="checkbox" /></td>
+                    </tr>
+                    <tr>
+                        <td><obs conceptId="1198AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="782AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Dinner" style="checkbox" /></td>
+                    </tr>
+                    <tr>
+                        <td><obs conceptId="1198AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="782AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Snack before bedtime" style="checkbox" /></td>
+                    </tr>
+                    <tr>
+                        <td><obs conceptId="1198AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="782AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="8 glasses of water" style="checkbox" /></td>
+                    </tr>
                 </table>
-                <table cellspacing="5" style="display: inline-block; ">
-                    
+                <table cellspacing="15" style="display: inline-block; ">
+                    <tr><th>Household food security assessment (not yet complete)</th></tr>
+                    <tr class="patient-details">
+                        <td>
+                            <obs    id="nutritional-status"
+                                        conceptId="163300AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                        answerConceptIds="1115AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,163302AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,163303AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                        answerLabels="Dietary change,Rationing,Dietary diversity"
+                                        style="radio"
+                                        answerSeparator="&lt;br /&gt;"
+                                />
+                        </td>
+                    </tr>
+                </table>
+                <br/>
+                <hr />
+                <h3 class="StepTitle-2">Physical activity assessment (not yet complete)</h3>
+                <table style="display: inline-block;" cellspacing="15">
+                    <tr class="patient-details">
+                        <td>
+                            <obs    id="nutritional-status"
+                                        conceptId="163300AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                        answerConceptIds="1115AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,163302AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,163303AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,163303AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                        answerLabels="Never,Low,Medium,High"
+                                        style="radio"
+                                        answerSeparator="&lt;br /&gt;"
+                                />
+                        </td>
+                    </tr>
                 </table>
             </fieldset>
 
