--- a/omod/src/main/webapp/resources/htmlforms/nutritionassessment.html
+++ b/omod/src/main/webapp/resources/htmlforms/nutritionassessment.html
@@ -46,7 +46,7 @@
         <div id="step-1">
             <h2 class="StepTitle">ASSESSMENT</h2>
             <fieldset class="patient-details">
-                <legend>Anthropometric & Biochemical</legend>
+                <legend>Anthropometric and Biochemical</legend>
                 <table cellspacing="5" style="float: left;">                    
                     <tr>
                         <th>Anthropometric assessment</th>
@@ -235,7 +235,7 @@
                 </table>
             </fieldset>
             <fieldset class="patient-details">
-                <legend>Dietary & Food Security</legend>
+                <legend>Dietary and Food Security</legend>
                 <table cellspacing="5" style=" float: left;">
                     <tr><th>Dietary assessment (not yet complete)</th></tr>
                     <tr>
@@ -293,7 +293,7 @@
                 </table>
             </fieldset>
             <fieldset class="patient-details">
-                <legend>NCDs & Risk Factors</legend>
+                <legend>NCDs and Risk Factors</legend>
                 <table>
                     <tr><td>Medical History</td></tr>
                     <tr><td>Family History of Chronic Diseases</td></tr>
