nutrition pilot deploy

--- a/omod/src/main/webapp/resources/htmlforms/nutritionassessment.html
+++ b/omod/src/main/webapp/resources/htmlforms/nutritionassessment.html
@@ -931,12 +931,9 @@
                     <tr>
                         <td>Micronutrient Supplements</td>
                         <td>
-                            <obs conceptId="163080AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="mic-supplements"/>
-                        </td>
-                        <td>
-                            <span class="value">
-                                <recentObs conceptId="163080AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-                            </span>
+                            <obs conceptId="161649AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="86339AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Vitamin A" style="checkbox" /><br />
+                            <obs conceptId="161649AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="Other" style="checkbox" id="otherVacc" />
+                            <obs conceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="other-vacc"  />
                         </td>
                     </tr>
                     <tr>
@@ -989,7 +986,7 @@
                                 <div style="float: left; padding-right: 50px">
                                     <obs conceptId="1151AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="5526AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="EBF" style="checkbox" /><br />
                                     <obs conceptId="1151AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="1150AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="BF" style="checkbox" /><br />
-                                    <obs conceptId="1151AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="5254AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="CF" style="checkbox" /><br />
+                                    <obs conceptId="1151AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="1152AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="CF" style="checkbox" /><br />
                                     <obs conceptId="1151AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="5254AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="ERF" style="checkbox" /><br />
                                     <obs conceptId="1151AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptId="6046AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabel="MF" style="checkbox" /><br />
                                 </div>
@@ -1044,26 +1041,15 @@
                     </tr>
                     <tr>
                         <td width="65%">
-                            <obs conceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" rows="10" style="textarea" />
+                            <obs conceptId="164879AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" rows="10" style="textarea" />
                         </td>
                         <td>
-                            <recentObs conceptId="160632AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
+                            <recentObs conceptId="164879AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
                         </td>
                     </tr>
                 </table>
             </fieldset>
         </div>
-        <fieldset class="tca-part">
-            <legend>Return Visit</legend>
-            <table>
-                <tr>
-                    <td>Return Visit Date:&#160;&#160;</td>
-                    <td>
-                        <obs conceptId="5096AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true" labelText=" " id="returnVisitDate" />
-                    </td>
-                </tr>
-            </table>
-        </fieldset>
     </div>
 
     <div class="ke-form-footer">
